@@ -108,7 +108,7 @@
 
     <tr BGCOLOR="#EEEEFF">
      <td VALIGN=TOP WIDTH=1% NOWRAP><b><font size=+1>Last update</font></b></td>
-     <td>25 August 2001</td>
+     <td>21 October 2001</td>
     </tr>
 
     <tr BGCOLOR="#CCCCFF">
@@ -120,7 +120,7 @@
      <td VALIGN=TOP><b><font size=+1>Todo</font></b></td>
      <td>
        <PRE>
-		All the basic objects can be used. Nevertheless, certain pattern, effects, ... are not
+		All the basic objects can be used. Nevertheless, certain patterns, effects, ... are not
 		supported.
       </PRE>
      </td>
@@ -130,6 +130,20 @@
      <td VALIGN=TOP><b><font size=+1>History</font></b></td>
      <td>
 	<ul>
+	<li>20 October 2001
+	<ul>
+		<li>features
+		<ul>
+			<li>text style (bold, italic, font size)</li>
+		</ul>
+		</li>
+		<li>bug fixes
+		<ul>
+			<li>text color</li>
+		</ul>
+		</li>
+	</ul>
+	</li>
 	<li>29 July 2001
 	<ul>
 		<li>bugs fix
@@ -211,7 +225,7 @@
 <tr><td>ELLIPSE</td>		<td></td>			<td></td></tr>
 <tr><td>POLYGONE</td>		<td></td>			<td></td></tr>
 <tr><td>BEZIER</td>		<td></td>			<td></td></tr>
-<tr><td>TEXT</td>		<td></td>
+<tr><td>TEXT</td>		<td>ALL except font (helvetica, ...)</td>
 
 <tr><td colspan="3"><b><i>ALL OTHER ARE IGNORED</i></b></td></tr>
 </table>
