@@ -1,3 +1,10 @@
+20 October 2001
+- features
+	o text style (bold, italic, font size)
+
+- bug fixes
+	o text color 
+
 29 july 2001
 - bug fixes
 	o multiple pages and layers supported
